# HexGlobe

./: .gitignore  .windsurfrules  README.md  build_docker.py  design_document.md  test_grid_visualization.py  test_single_tile_visualization.py
backend/: create_sample_tiles.py  pyproject.toml  run.py
backend/hexglobe/: main.py
backend/hexglobe/api/: geocode.py  tiles.py
backend/hexglobe/models/: tile.py
data/tiles/: 822807fffffffff.json  82280ffffffffff.json  822817fffffffff.json  82281ffffffffff.json  822827fffffffff.json  82282ffffffffff.json  822837fffffffff.json  8228a7fffffffff.json  8228affffffffff.json  822907fffffffff.json  82290ffffffffff.json  822917fffffffff.json  82291ffffffffff.json  822957fffffffff.json  822987fffffffff.json  82298ffffffffff.json  82299ffffffffff.json  8229a7fffffffff.json  8229affffffffff.json
frontend/: data  index.html  mods  package-lock.json  package.json
frontend/assets/: generate_hex_background.py  generate_hex_map.py
frontend/css/: hex-theme.css  styles.css
frontend/js/: app.js  hexTile.js  modLoader.js  navigation.js
frontend/src/: App.vue  main.js
frontend/src/components/: CanvasHexagon.vue  ErrorDisplay.vue  HexTile.vue  SimpleHexagon.vue  SingleHexMap.vue  Tile.vue  TileMap.vue  TileNavigation.vue
frontend/src/router/: index.js
frontend/src/store/: tileStore.js
frontend/src/utils/: apiCheck.js
frontend/src/views/: HomeView.vue  TileView.vue
hexglobe/: Dockerfile  start.sh  supervisord.conf
mods/default/: README.md  manifest.json
mods/default/css/: theme.css
mods/test/: README.md  manifest.json
(+3 files in other folders)
