[tool.poetry]
name = "hexglobe"
version = "0.1.0"
description = "A web application framework that implements a global hexagonal grid system"
authors = ["Your Name <your.email@example.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
h3 = "^3.7.6"
pydantic = "^2.4.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
